--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,8 @@ header{
     margin: 0 auto;
 }
 .navbar, .banner{
-    max-width: 1440px;
+    /* max-width: 1440px; */
+    width: 90%;
     margin: 0 auto;
 }
 .navbar{
@@ -107,7 +108,8 @@ header{
 
 /* main section start here */
 main{
-    max-width: 1440px;
+    /* max-width: 1440px; */
+    width: 90%;
     margin: 0 auto;
 }
 /* quick list of our features */
@@ -121,7 +123,12 @@ main{
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
     border-radius: 8px;
-    margin-right: 73px;
+    
+}
+.quick-list-content{
+    max-width: 537px;
+    margin: 0 auto;
+    margin-left: 73px;
 }
 .section-title{
     font-size: 2.8125rem;
@@ -145,14 +152,33 @@ main{
     margin-bottom: 32px;
 }
 
+/* some facts */
 
 
 @media screen and (max-width:576px) {
     .nav-links,
-    .navbar{
+    .navbar,
+    .quick-list{
         flex-direction: column;
     }
-    
+    .quick-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .quick-list-content{
+        margin-right: 0px;
+        margin-left: -30px;
+        margin-top: 30px;
+    }
+
+}
+/* medium device */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .quick-list{
+        flex-direction: column;
+    }
+    .quick-list-content{
+        margin: 50px auto;
+    }
 }
 
 
