--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ header{
     margin: 0 auto;
 }
 .navbar, .banner{
-    /* max-width: 1440px; */
+    max-width: 1440px;
     width: 90%;
     margin: 0 auto;
 }
@@ -108,10 +108,11 @@ header{
 
 /* main section start here */
 main{
-    /* max-width: 1440px; */
+    max-width: 1440px;
     width: 90%;
     margin: 0 auto;
 }
+
 /* quick list of our features */
 .quick-list{
     display: flex;
@@ -153,7 +154,46 @@ main{
 }
 
 /* some facts */
+main{
+    border: 1px solid black;
+}
 
+.some-facts p{
+    max-width: 542px;
+}
+.cards-container{
+    display: grid;
+    /* width: 90%; */
+    margin: 0 auto;
+    /* gap: 124px; */
+    justify-items: center;
+    /* align-items: center; */
+    grid-template-columns: repeat(4, 1fr);
+    margin: 100px 50px 140px 50px;
+}
+.card{
+    border: 1px solid rgb(255, 144, 14);
+    border-radius: 8px;
+    width: 240px;
+    height: 240px;
+    text-align: center;
+    align-content: center;
+}
+.card img{
+    width: 45.22px;
+}
+.card h4{
+    color: #424242;
+    font-size: 2.8125rem;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.card h5{
+    color: #727272;
+    font-weight: 600;
+    font-size: 1.25rem;
+}
 
 @media screen and (max-width:576px) {
     .nav-links,
@@ -168,6 +208,9 @@ main{
         margin-right: 0px;
         margin-left: -30px;
         margin-top: 30px;
+    }
+    .cards-container{
+        grid-template-columns: 1fr ;
     }
 
 }
